<resources>
    <string name="app_name">CredHub</string>
    <string name="submit">Submit</string>
    <string name="descriptor">Descriptor</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_record">New Record</string>
    <string name="desc">Description</string>
    <string name="topMarginPass">75dp</string>
    <string name="topMarginPass2">150dp</string>
    <string name="show">Show</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">User</string>
</resources>
