<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowPassword">

    <LinearLayout
        android:id="@+id/DesLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/desc"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/UsernameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/Username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:weightSum="1.0">

        <Button
            android:id="@+id/ShowButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="270dp"
            android:layout_weight="0.3"
            android:text="@string/show" />

        <Button
            android:id="@+id/ExportButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="270dp"
            android:layout_weight="0.3"
            android:text="@string/export" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DeleteLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:weightSum="1.0">

        <Button
            android:id="@+id/DeleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/delete" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>